# prettymaps

./: .gitattributes  .gitignore  README.md  pyproject.toml
prettymaps/: cli.py  draw.py  fetch.py
prettymaps/presets/: barcelona.json  tijuca.json
